# blizzard-haskell-api

./: LICENSE  LICENSE.md  README.md  blizzard-haskell-api.cabal
app/: Main.hs  Options.hs
src/: Lib.hs
src/Types/: APIBase.hs  General.hs  Options.hs
src/Types/API/: Base.hs  BlizzardTypes.hs  Requests.hs
test/: Spec.hs
