name:                blizzard-haskell-api
version:             0.1.0.0
homepage:            https://github.com/JoeMShanahan/blizzard-haskell-api#readme
license:             BSD3
license-file:        LICENSE.md
author:              Joe Shanahan
copyright:           2017 Joe Shanahan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types.API.BlizzardTypes
                     , Types.API.Base
                     , Types.API.Requests
                     , Types.General
                     , Types.Options
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , wreq
  default-language:    Haskell2010

executable blizzard-haskell-api
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blizzard-haskell-api
                     , classy-prelude
                     , optparse-applicative
  default-language:    Haskell2010

test-suite blizzard-haskell-api-unit    
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blizzard-haskell-api
                     , classy-prelude
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JoeMShanahan/blizzard-haskell-api
